--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h1, h2, p {
 p{
     text-align: center;
     display: block;
+    flex: 1;
 }
 h3{
     text-align: center;
@@ -82,7 +83,7 @@ h1, h2 {
     width: 25%;
 }
   
-  /* FOOTER */
+  
   
 footer {
     font-size: 14px;
@@ -90,6 +91,8 @@ footer {
   
 .address {
     margin-bottom: 5px;
+    font-style: normal;
+    
 }
   
 a {
@@ -115,16 +118,13 @@ center{
     
     max-width: 80px;
 }
-main{
-    flex: 1;
-    overflow: scroll;
-}
-html{
+
+/* html{
     height: -webkit-fill-available;
 }
 body{
     height: -webkit-fill-available;
-}
+} */
 
 footer {
     font-size: 14px;
@@ -139,11 +139,11 @@ a {
 }
   
 a:visited {
-    color: black;
+    color: rgb(250, 125, 8);
 }
   
 a:hover {
-    color: brown;
+    color: rgb(243, 239, 14);
 }
   
 a:active {
