--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ h3{
     padding: 20px;
     max-width: 500px;
     
-    /* height: -webkit-fill-available; */
+    height: -webkit-fill-available; 
 }
 
 img {
