--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ h3{
     margin-right: auto;
     padding: 20px;
     max-width: 500px;
-    
+    max-width: -webkit-fill-available;
     height: -webkit-fill-available; 
 }
 
