--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ h3{
     padding: 20px;
 
     max-width: 500px;
-    height: -webkit-fill-available; 
+    height: --webkit-fill-available; 
 }
 
 img {
@@ -119,7 +119,7 @@ center{
     margin-left: 0;
     margin-right: 0;
     
-    max-width: 80px;
+    max-width: ;
 }
 
 /* html{
