--- a/styles.css
+++ b/styles.css
@@ -22,37 +22,26 @@ h2 {
   
 h1, h2, p {
     text-align: center;
-    flex: 1;
-
-}
-p{
-    text-align: center;
-    display: block;
-    flex: 1;
-     
 }
 h3{
-    text-align: center;
-    font-family: sans-serif;
+    text-align: left;
 }
   
 .menu {
-    width: 100%;
-    background-color: white;
+    width: 80%;
+    background-color: rgb(255, 255, 255);
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
-
-    max-width: -webkit-fill-available;
-    height: -webkit-fill-available; 
+    max-width: 500px;
 }
 
 img {
     display: block;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    padding: auto ;
-    
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
+    max-width: 500px;
 }
 
 hr {
@@ -86,49 +75,8 @@ h1, h2 {
     width: 25%;
 }
   
+  /* FOOTER */
   
-  
-footer {
-    font-size: 14px;
-}
-  
-.address {
-    margin-bottom: 5px;
-    font-style: normal;
-    
-}
-  
-a {
-    color: rgb(250, 144, 6);
-}
-  
-a:visited {
-    color: black;
-}
-  
-a:hover {
-    color: brown;
-}
-  
-a:active {
-    color: brown;
-}
-center{
-    width: auto;
-    /* background-color: rgb(234, 137, 9); */
-    margin-left: 0;
-    margin-right: 0;
-    
-    max-width: 80px;
-}
-
-/* html{
-    height: -webkit-fill-available;
-}
-body{
-    height: -webkit-fill-available;
-} */
-
 footer {
     font-size: 14px;
 }
@@ -138,17 +86,17 @@ footer {
 }
   
 a {
-    color: black;
+    color: rgb(22, 13, 3);
 }
   
 a:visited {
-    color: rgb(250, 125, 8);
+    color: rgb(248, 123, 6);
 }
   
-a:hover {
-    color: rgb(243, 239, 14);
+ a:hover {
+    color: rgb(107, 32, 32);
 }
   
 a:active {
-    color: brown;
-}
+    color: rgb(194, 40, 91);
+} 
