--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ img {
 
     height:25%;
     width:--webkit-fill-available;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
 }
 
 hr {
