--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h3{
 img {
 
     height:25%;
-    width:--webkit-fill-available;
+    width:75%;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
