--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,8 @@ h3{
 }
 
 img {
-
-    height:auto;
-    width:80%;
+    height:35%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
