--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h3{
     padding: 20px;
     max-width: 500px;
     
-    height: -webkit-fill-available; 
+    height: --webkit-fill-available; 
 }
 
 img {
@@ -44,7 +44,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
-    max-width: 500px;
+    max-width: --webkit-fill-available;
 }
 
 hr {
